# 1.12.2-1.1
* Items in mega chests now have their tooltips rendered correctly.